--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,8 @@
 </head>
 
 <header>
-    <h1>Random Verse Generator</h1>
+    <h1>Bible Verse Generator</h1>
+    <p>By Kevin Benavente</p>
 </header>
 
 <body>
