--- a/public/css/chapters.css
+++ b/public/css/chapters.css
@@ -8,6 +8,9 @@ body {
   flex-direction: column;
 }
 
+main {
+  max-height: 90vh;
+}
 .navbar {
   background-color: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -43,10 +46,92 @@ header {
   display: none;
 }
 
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 18px;
+  color: #555;
+}
+
+select,
+.btn {
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #555;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+select {
+  width: calc(50% - 20px);
+  display: inline-block;
+}
+
+.btn {
+  width: calc(50% - 20px);
+  display: inline-block;
+  margin-bottom: 0;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  font-size: 18px;
+}
+
+.btn:hover {
+  background-color: #45a049;
+}
+
+.selection-container {
+  text-align: center;
+  width: 100%;
+  max-width: 640px;
+  margin: auto;
+}
+
+.selection-row {
+  margin-bottom: 15px;
+}
+
+.verses-display {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 1200px;
+  margin: 20px auto;
+  flex-wrap: wrap;
+}
+
+#verses-container1,
+#verses-container2 {
+  max-width: calc(50% - 40px);
+  max-height: 400px;
+  overflow-y: auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin: 10px;
+  box-sizing: border-box;
+  flex: 1;
+  min-width: 300px;
+}
+
+.verse-text {
+  font-size: 24px;
+  color: #333;
+  line-height: 1.4;
+}
+
 @media only screen and (max-width: 600px) {
   body {
     padding-left: 10px;
     padding-right: 10px;
+  }
+  main {
+    max-height: 85%;
   }
 
   header {
@@ -98,5 +183,25 @@ header {
 
   .nav-links.open {
     display: block;
+  }
+
+  select,
+  .btn {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .selection-row {
+    margin-bottom: 10px;
+  }
+
+  .verses-display {
+    flex-direction: column;
+  }
+
+  #verses-container1,
+  #verses-container2 {
+    max-width: 100%;
+    margin-bottom: 10px;
   }
 }
