--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
             <button class="hamburger">&#9776;</button>
             <div class="nav-links">
                 <a href="/">Random Verse</a>
-                <a href="/chapters">Chapters</a>
+                <a href="/chapters">Translation Comparison</a>
                 <a href="/search">Search</a>
             </div>
         </nav>
