implemented search, broke translation mobile css

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,1 +1,12 @@
-<p>search page here</p>
+<h1>Keyword Verse Search</h1>
+<div class="selection-container">
+    <form id="searchForm" class="selection-row">
+        <input type="text" id="searchInput" placeholder="Enter keyword(s)">
+        <button type="submit" class="btn">Search</button>
+    </form>
+</div>
+<div id="results-for"></div>
+<div class="verses-display">
+    <div id="results" class="verses-container">
+    </div>
+</div>
