--- a/public/css/chapters.css
+++ b/public/css/chapters.css
@@ -48,40 +48,9 @@ header {
 
 label {
   display: block;
-  margin-bottom: 5px;
-  font-size: 18px;
-  color: #555;
-}
-
-select,
-.btn {
-  padding: 10px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  margin-bottom: 10px;
   font-size: 16px;
   color: #555;
-  background-color: #fff;
-  cursor: pointer;
-}
-
-select {
-  width: calc(50% - 20px);
-  display: inline-block;
-}
-
-.btn {
-  width: calc(50% - 20px);
-  display: inline-block;
-  margin-bottom: 0;
-  background-color: #4caf50;
-  color: #fff;
-  border: none;
-  font-size: 18px;
-}
-
-.btn:hover {
-  background-color: #45a049;
 }
 
 .selection-container {
@@ -89,25 +58,40 @@ select {
   width: 100%;
   max-width: 640px;
   margin: auto;
+  padding: 20px;
 }
 
 .selection-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   margin-bottom: 15px;
 }
 
-.verses-display {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  max-width: 1200px;
-  margin: 20px auto;
-  flex-wrap: wrap;
+select {
+  width: 200px;
+  padding: 8px;
+  margin: 0 10px;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.btn {
+  padding: 10px 15px;
+  font-size: 16px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0 10px;
 }
 
 #verses-container1,
 #verses-container2 {
-  max-width: calc(50% - 40px);
-  max-height: 400px;
+  width: calc(50% - 20px);
+  max-height: 600px;
   overflow-y: auto;
   padding: 20px;
   background-color: #fff;
@@ -119,16 +103,30 @@ select {
   min-width: 300px;
 }
 
+.verses-display {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  max-width: 1200px;
+  flex-wrap: wrap;
+}
+
 .verse-text {
-  font-size: 24px;
+  font-size: 20px;
   color: #333;
   line-height: 1.4;
 }
 
+optgroup {
+  font-weight: bold;
+  display: block;
+  color: black;
+}
+
 @media only screen and (max-width: 600px) {
   body {
-    padding-left: 10px;
-    padding-right: 10px;
+    width: 100vw;
+    overflow-x: hidden;
   }
   main {
     max-height: 85%;
@@ -185,23 +183,32 @@ select {
     display: block;
   }
 
+  .selection-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   select,
   .btn {
-    width: 100%;
-    margin-bottom: 10px;
+    width: 90%;
+    margin: 10px auto;
   }
 
-  .selection-row {
-    margin-bottom: 10px;
-  }
-
-  .verses-display {
-    flex-direction: column;
+  .btn {
+    padding: 12px 20px;
   }
 
   #verses-container1,
   #verses-container2 {
-    max-width: 100%;
-    margin-bottom: 10px;
+    width: 100%;
+    margin: 10px 0;
+    padding: 15px;
+  }
+
+  .verses-display {
+    flex-direction: column;
+    margin: 0;
   }
 }
