--- a/public/css/search.css
+++ b/public/css/search.css
@@ -2,12 +2,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  margin: 0;
+  margin-top: 70px;
   background-color: #f0f0f0;
   flex-direction: column;
 }
 
+h1 {
+  text-align: center;
+}
 .navbar {
   background-color: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -41,6 +43,81 @@ header {
 
 .hamburger {
   display: none;
+}
+
+.selection-container {
+  text-align: center;
+  width: 100%;
+  max-width: 640px;
+  margin: 20px auto;
+}
+
+.selection-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#searchForm {
+  width: 100%;
+  padding-bottom: 20px;
+}
+
+#searchInput {
+  width: 70%;
+  padding: 10px;
+  margin-right: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+}
+
+.btn {
+  padding: 10px 15px;
+  font-size: 16px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0 10px;
+}
+
+.verses-container {
+  display: none;
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 20px;
+  width: 100%;
+  max-height: 500px;
+  overflow-y: auto;
+  margin-top: 40px;
+}
+
+.verses-container a {
+  text-decoration: underline;
+  color: #4caf50;
+  font-size: 20px;
+}
+
+.verses-container p {
+  font-size: 20px;
+}
+
+.highlight {
+  background-color: #ffffad;
+  font-weight: bold;
+  padding: 0 2px;
+}
+
+.searchresult {
+  padding-top: 10px;
+  border-bottom: 2px solid #ccc;
+}
+
+#results-for {
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 @media only screen and (max-width: 600px) {
